Enable structure concurrency